--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,7 @@ jobs:
     - name: Build
       run: |
         npm install
-        npx webpack
-        echo gitub
+        npm run build main
         
     - name: GitHub Pages
       # You may pin to the exact commit or the version.
