--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
 
     - name: Build
       run: |
-        npm install
-        npm run build main
+        npm install --legacy-peer-deps
+        npm run build host
         
     - name: GitHub Pages
       # You may pin to the exact commit or the version.
