--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         # npm install --legacy-peer-deps
         # npm run build host
-        echo ${{ github }}
+        echo "$GITHUB_CONTEXT"
         
 #     - name: GitHub Pages
 #       # You may pin to the exact commit or the version.
