--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env: 
+  TARGET_PROJECT: host
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -24,44 +27,43 @@ jobs:
 
     - name: Build
       run: |
-        # npm install --legacy-peer-deps
-        # npm run build host
-        echo github
+        npm install --legacy-peer-deps
+        npm run build $TARGET_PROJECT
         
-#     - name: GitHub Pages
-#       # You may pin to the exact commit or the version.
-#       # uses: crazy-max/ghaction-github-pages@a117e4aa1fb4854d021546d2abdfac95be568a3a
-#       uses: crazy-max/ghaction-github-pages@v2.6.0
-#       env:
-#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#       with:
-#         # Git domain (default github.com)
-# #           domain: # optional, default is github.com
-#         # GitHub repository where assets will be deployed (default $GITHUB_REPOSITORY)
-# #           repo: # optional
-#         # Git branch where assets will be deployed
-#         target_branch: gh-pages # optional, default is gh-pages
-#         # Create incremental commit instead of doing push force
-# #           keep_history: # optional, default is false
-#         # Allow an empty commit to be created
-# #           allow_empty_commit: # optional, default is true
-#         # Build directory to deploy
-#         build_dir: dist
-#         # Whether to treat build_dir as an absolute path
-# #           absolute_build_dir: aa # optional, default is false
-#         # If enabled, the content of symbolic links will be copied
-# #           follow_symlinks: # optional, default is false
-#         # The committer name and email address
-# #           committer: # optional
-#         # The author name and email address
-# #           author: # optional
-#         # Commit message
-#         commit_message: "feat: deploy" # optional
-#         # Write the given domain name to the CNAME file
-# #           fqdn: # optional
-#         # Allow Jekyll to build your site
-# #           jekyll: # optional, default is true
-#         # If enabled, nothing will be pushed
-# #           dry_run: # optional, default is false
-#         # Enable verbose output
-#         verbose: true # optional, default is false
+    - name: GitHub Pages
+      # You may pin to the exact commit or the version.
+      # uses: crazy-max/ghaction-github-pages@a117e4aa1fb4854d021546d2abdfac95be568a3a
+      uses: crazy-max/ghaction-github-pages@v2.6.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        # Git domain (default github.com)
+#           domain: # optional, default is github.com
+        # GitHub repository where assets will be deployed (default $GITHUB_REPOSITORY)
+#           repo: # optional
+        # Git branch where assets will be deployed
+        target_branch: gh-pages # optional, default is gh-pages
+        # Create incremental commit instead of doing push force
+#           keep_history: # optional, default is false
+        # Allow an empty commit to be created
+#           allow_empty_commit: # optional, default is true
+        # Build directory to deploy
+        build_dir: dist/apps/$TARGET_PROJECT
+        # Whether to treat build_dir as an absolute path
+#           absolute_build_dir: aa # optional, default is false
+        # If enabled, the content of symbolic links will be copied
+#           follow_symlinks: # optional, default is false
+        # The committer name and email address
+#           committer: # optional
+        # The author name and email address
+#           author: # optional
+        # Commit message
+        commit_message: "feat: deploy" # optional
+        # Write the given domain name to the CNAME file
+#           fqdn: # optional
+        # Allow Jekyll to build your site
+#           jekyll: # optional, default is true
+        # If enabled, nothing will be pushed
+#           dry_run: # optional, default is false
+        # Enable verbose output
+        verbose: true # optional, default is false
