--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,7 @@ on:
 
 env: 
   TARGET_PROJECT: host
+  BASE_HREF: /${{ github.event.repository.name }}/
 
 jobs:
   build:
@@ -28,7 +29,7 @@ jobs:
     - name: Build
       run: |
         npm install --legacy-peer-deps
-        npm run build $TARGET_PROJECT
+        npm run build $TARGET_PROJECT -- --baseHref=$BASE_HREF
         
     - name: GitHub Pages
       # You may pin to the exact commit or the version.
